--- a/src/resources/public/css/header.css
+++ b/src/resources/public/css/header.css
@@ -1,5 +1,9 @@
+header{
+    
+}
+
 .navbar{
-    background-color: #f2f2f2 !important;
+    background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
 }
 
 .navbar .navbar__item{
