--- a/src/resources/views/account/edit.hbs
+++ b/src/resources/views/account/edit.hbs
@@ -17,6 +17,6 @@
         {{#if errors}}
         <small class="form-text alert alert-danger py-2 mb-3">{{errors}}</small>
         {{/if}}
-        <button type="submit" class="btn btn-success">Đổi mật khẩu</button>
+        <button type="submit" class="btn btn-primary">Đổi mật khẩu</button>
     </form>
 </div>
