--- a/src/resources/views/account/login.hbs
+++ b/src/resources/views/account/login.hbs
@@ -12,6 +12,6 @@
         {{#if error}}
         <small class="form-text alert alert-danger py-2 mb-3">{{error}}</small>
         {{/if}}
-        <button type="submit" class="btn btn-success d-block m-auto px-5 py-2 font-weight-bold">Đăng nhập</button>
+        <button type="submit" class="btn btn-primary d-block m-auto px-5 py-2 font-weight-bold">Đăng nhập</button>
     </form>
 </div>
