--- a/src/resources/views/customers/edit.hbs
+++ b/src/resources/views/customers/edit.hbs
@@ -26,6 +26,6 @@
             <label for="address">Địa chỉ:</label>
             <textarea name="address" style="resize: none;" class="form-control" id="address" cols="60" rows="3" placeholder="">{{customer.address}}</textarea>
         </div>
-        <button type="submit" class="btn btn-success">Lưu lại</button>
+        <button type="submit" class="btn btn-primary">Lưu lại</button>
     </form>
 </div>
