--- a/src/resources/views/products/edit.hbs
+++ b/src/resources/views/products/edit.hbs
@@ -44,6 +44,6 @@
             <label for="saleReason">Lý do cập nhập:</label>
             <input type="text" name="saleReason" value="{{product.saleReason}}" class="form-control" id="saleReason">
         </div>
-        <button type="submit" class="btn btn-success">Lưu lại</button>
+        <button type="submit" class="btn btn-primary">Lưu lại</button>
     </form>
 </div>
