--- a/src/resources/views/providers/create.hbs
+++ b/src/resources/views/providers/create.hbs
@@ -17,6 +17,6 @@
             <label for="address">Địa chỉ:</label>
             <input type="text" name="address" class="form-control" id="address" placeholder="Địa chỉ của nhà cung cấp...">
         </div>
-        <button type="submit" class="btn btn-success">Thêm nhà cung cấp</button>
+        <button type="submit" class="btn btn-primary">Thêm nhà cung cấp</button>
     </form>
 </div>
