--- a/src/resources/views/account/register.hbs
+++ b/src/resources/views/account/register.hbs
@@ -49,7 +49,7 @@
             {{/each}}
             {{/if}}
 
-            <button type="submit" class="btn btn-success d-block m-auto px-5 py-2 font-weight-bold">Đăng ký</button>
+            <button type="submit" class="btn btn-primary d-block m-auto px-5 py-2 font-weight-bold">Đăng ký</button>
         </form>
     </div>
 </div>
