--- a/src/resources/views/bill/view.hbs
+++ b/src/resources/views/bill/view.hbs
@@ -61,6 +61,6 @@
     <p class="text-right mt-4 font-weight-bold">Nhân viên bán hàng</p>
     <p class="text-right mr-5 font-italic">{{ this.staff }}</p>
     <div class="text-right mt-4">
-        <button onclick="window.print()" class="btn btn-success btn-none">Xuất hóa đơn</button>
+        <button onclick="window.print()" class="btn btn-primary btn-none">Xuất hóa đơn</button>
     </div>
 </div>
