--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -11,11 +11,8 @@
                         <h5 class="card-title text-dark">{{this.name}}</h5>
                     </a>
                     <p class="card-text card-cost"><b>{{this.cost}}</b> VNĐ</p>
-                    {{!-- <p class="text-right mb-0"><a href="/cart/{{ this._id }}"
-                            class="btn btn-outline-success card-cart">Thêm vào giỏ</a>
-                    </p> --}}
                     <form action="/cart/{{ this._id }}" method="POST" class="mt-3 d-flex justify-content-end card-cart">
-                        <button type="submit" class="btn btn-success">
+                        <button type="submit" class="btn btn-outline-primary btn-grad">
                             Thêm vào giỏ
                         </button>
                     </form>
